2011-05-12 Roman
- SYS.XML: No empty attributes save is added.
- Protocol.HTTP: Messages generation for auth process is added.
- UI.WebCfgD: JavaScript code is updated for finish realisation full request function servReq().


2011-05-11 Roman
- FIX:DAQ.ModBus: Error generaton on connection lost or no reply on timeout is fixed.
- UI.WebCfgD: JavaScript code is updated for: string encoding rewrite and first realisation full request function servReq().


2011-05-11 Maxim
- FIX:UI.Vision: The fills' saving is fixed in the shapeSave function for the primitive ElFigure.
- FIX:UI.Vision: Connecting of the figures in the MouseButtonRelease event is fixed and optimized for the primitive ElFigure.


2011-05-09 Roman
- UI.Vision: Project's session recreation is added on runtime and after session closed on server side.


2011-05-08 Roman
- !!!!:SYS: Save to config file support is added.
- !:XMLNode: Load and save comment blocks is added for full mode.


2011-05-06 Roman
- FIX:SYS.XMLNode: UTF entities parse to UTF-8 is fixed.
- FIX:DAQ.JavaLikeCalc: Second argument downloading for RegExp() object is fixed. Return false for wrong type of compare functions.


2011-05-05 Roman
- !!:SYS.XMLNode: Load text of the tags to separated nodes suport is added. Used for full text configuration of tags store.
- !!:SYS.XMLNode: Expat XML-parser using is full removed.
- FIX:DAQ.SNMP: OID list of parameters store is fixed and attributes list clear on a parameter enabling is added.


2011-05-04 Roman
- SYS: The ResString object is significant improved for free conver to/from std::string and some typical functions of std::string wrap.
- !!!!:SYS.TConfig, Archives, DAQ, Security, Transports, Archive.*, DAQ.*, Protocol.UserProtocol, Transport.*, UI.VCAEngine, UI.WebUser:
    For direct link to string configuration properties is used resourced object ResString everywhere.
- UI.QTCfg: No warning dialog set for start path open error. Simple open local root page.


2011-05-03 Roman