@@ -1,3 +1,8 @@
+2011-05-13 Maxim
+- FIX:UI.Vision: The fills' drawing when moving the 'p4' of the 'arc' is fixed for the primitive ElFigure.
+- FIX:UI.Vision: Call of the 'createInundationPath' function for the fills with the images is optimized for the primitive ElFigure.
+
+
 2011-05-12 Roman
 - SYS.XML: No empty attributes save is added.
 - Protocol.HTTP: Messages generation for auth process is added.
